add andrew v q week2

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
                                 "replays/week2/cam-v-ray/g3.html"
                             ]
                         },
+                        {
+                            player1: "Andrew",
+                            player2: "Q",
+                            score: "2-0",
+                            games: [
+                                "replays/week2/andrew-v-q/g1.html",
+                                "replays/week2/andrew-v-q/g2.html",
+                            ]
+                        },
                     ]
                 },
                 // Add more weeks here following the same structure
