andrew v cam week3

--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
                         },
                     ]
                 },
+                {
+                    weekNumber: 3,
+                    battles: [
+                        {
+                            player1: "Andrew",
+                            player2: "Cam",
+                            score: "2-1",
+                            games: [
+                                "replays/week3/andrew-v-cam/g1.html",
+                                "replays/week3/andrew-v-cam/g2.html",
+                                "replays/week3/andrew-v-cam/g3.html",
+                            ]
+                        }
+                    ]
+                }
                 // Add more weeks here following the same structure
                 // Example:
                 // {
