jay v bman week 2

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                                 "replays/week2/andrew-v-q/g2.html",
                             ]
                         },
+                        {
+                            player1: "Jay",
+                            player2: "Bryan",
+                            score: "2-0",
+                            games: [
+                                "replays/week2/jay-v-bryan/g1.html"
+                            ]
+                        }
                     ]
                 },
                 {
@@ -93,7 +101,7 @@
                                 "replays/week3/andrew-v-cam/g2.html",
                                 "replays/week3/andrew-v-cam/g3.html",
                             ]
-                        }
+                        },
                     ]
                 }
                 // Add more weeks here following the same structure
