ray v bman week 3

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                                 "replays/week3/andrew-v-cam/g3.html",
                             ]
                         },
+                        {
+                            player1: "Raymond",
+                            player2: "Bryan",
+                            score: "2-0",
+                            games: [
+                                "replays/week3/ray-v-bryan/g1.html",
+                                "replays/week3/ray-v-bryan/g2.html",
+                            ]
+                        }
                     ]
                 }
                 // Add more weeks here following the same structure
