--- a/index.html
+++ b/index.html
@@ -110,9 +110,20 @@
                                 "replays/week3/ray-v-bryan/g1.html",
                                 "replays/week3/ray-v-bryan/g2.html",
                             ]
+                        },
+                        {
+                            player1: "Jay",
+                            player2: "Q",
+                            score: "2-1",
+                            games: [
+                                "replays/week3/jay-v-q/g1.html",
+                                "replays/week3/jay-v-q/g2.html",
+                                "replays/week3/jay-v-q/g3.html",
+                            ]
                         }
                     ]
-                }
+                },
+
                 // Add more weeks here following the same structure
                 // Example:
                 // {
