cam v bryan week 4

--- a/index.html
+++ b/index.html
@@ -123,7 +123,20 @@
                         }
                     ]
                 },
-
+                {
+                    weekNumber: 4,
+                    battles: [
+                        {
+                            player1: "Cam",
+                            player2: "Bryan",
+                            score: "2-0",
+                            games: [
+                                "replays/week4/cam-v-bryan/g1.html",
+                                "replays/week4/cam-v-bryan/g2.html",
+                            ]
+                        },
+                    ]
+                }
                 // Add more weeks here following the same structure
                 // Example:
                 // {
