andrew v jay week 4

--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                                 "replays/week4/cam-v-bryan/g2.html",
                             ]
                         },
+                        {
+                            player1: "Andrew",
+                            player2: "Jay",
+                            score: "2-0",
+                            games: [
+                                "replays/week4/andrew-v-jay/g1.html",
+                                "replays/week4/andrew-v-jay/g2.html",
+                            ]
+                        }
                     ]
                 }
                 // Add more weeks here following the same structure
