--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
                                 "replays/week4/andrew-v-jay/g1.html",
                                 "replays/week4/andrew-v-jay/g2.html",
                             ]
+                        },
+                        {
+                            player1: "Ray",
+                            player2: "Q",
+                            score: "2-0",
+                            games: [
+                                "replays/week4/ray-v-q/g1.html",
+                                "replays/week4/ray-v-q/g2.html",
+                            ]
                         }
                     ]
                 }
