--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             ]
                         },
                         {
-                            player1: "Ray",
+                            player1: "Raymond",
                             player2: "Q",
                             score: "2-0",
                             games: [
