--- a/index.html
+++ b/index.html
@@ -154,6 +154,21 @@
                             ]
                         }
                     ]
+                },
+                {
+                    weekNumber: 4,
+                    battles: [
+                        {
+                            player1: "Andrew",
+                            player2: "Bryan",
+                            score: "2-1",
+                            games: [
+                                "replays/week5/andrew-v-bryan/g1.html",
+                                "replays/week5/andrew-v-bryan/g2.html",
+                                "replays/week5/andrew-v-bryan/g3.html",
+                            ]
+                        }
+                    ]
                 }
                 // Add more weeks here following the same structure
                 // Example:
