week 5 jay v ray

--- a/index.html
+++ b/index.html
@@ -167,6 +167,17 @@
                                 "replays/week5/andrew-v-bman/g2.html",
                                 "replays/week5/andrew-v-bman/g3.html",
                             ]
+                        },
+                        {
+                            player1: "Raymond",
+                            player2: "Jay",
+                            score: "2-1",
+                            games: [
+                                "replays/week5/ray-v-jay/g1.html",
+                                "replays/week5/ray-v-jay/g2.html",
+                                "replays/week5/ray-v-jay/g3.html",
+                            ]
+
                         }
                     ]
                 }
