--- a/index.html
+++ b/index.html
@@ -177,7 +177,16 @@
                                 "replays/week5/ray-v-jay/g2.html",
                                 "replays/week5/ray-v-jay/g3.html",
                             ]
-
+                        },
+                        {
+                            player1: "Cam",
+                            player2: "Q",
+                            score: "2-1",
+                            games: [
+                                "replays/week5/cam-v-q/g1.html",
+                                "replays/week5/cam-v-q/g2.html",
+                                "replays/week5/cam-v-q/g3.html",
+                            ]
                         }
                     ]
                 }
